--- a/index.html
+++ b/index.html
@@ -6,81 +6,20 @@
 </head>
 
 <body>
-    <script>
-        // rock = 1, paper = 2, scissors = 3
-
-        let playerScore = 0;
-        let computerScore = 0;
-
-        let playRound = function () {
-
-            let playerSelection = prompt("Rock, paper, scissors?");
-            let result;
-            let min = 1;
-            let max = 4;
-            let computerSelection =
-                Math.floor((Math.random() * (max - min)) + min);
-
-            if (playerSelection.toLowerCase() == "rock") {
-                playerSelection = 1
-            } else if (playerSelection.toLowerCase() == "paper") {
-                playerSelection = 2
-            } else if (playerSelection.toLowerCase() == "scissors") {
-                playerSelection = 3
-            }
-
-            if (computerSelection == 1 && playerSelection == 1) {
-                result = "Tie! Try again!"
-                console.log(result)
-            } else if (computerSelection == 1 && playerSelection == 2) {
-                result = "You win! Paper covers rock!"
-                console.log(result)
-            } else if (computerSelection == 1 && playerSelection == 3) {
-                result = "You lose! Rock crushes scissors!"
-                console.log(result)
-
-            } else if (computerSelection == 2 && playerSelection == 1) {
-                result = "You lose! Paper covers rock!"
-                console.log(result)
-            } else if (computerSelection == 2 && playerSelection == 2) {
-                result = "Tie! Try again!"
-                console.log(result)
-            } else if (computerSelection == 2 && playerSelection == 3) {
-                result = "You win! Scissors cuts paper!"
-                console.log(result)
-
-            } else if (computerSelection == 3 && playerSelection == 1) {
-                result = "You win! Rock crushes scissors!"
-                console.log(result)
-            } else if (computerSelection == 3 && playerSelection == 2) {
-                result = "You lose! Scissors cuts paper!"
-                console.log(result)
-            } else if (computerSelection == 3 && playerSelection == 3) {
-                result = "Tie! Try again!"
-                console.log(result)
-
-            }
-
-            console.log(computerSelection, playerSelection)
-
-            if (result.includes("win"))
-                playerScore++;
-            else if (result.includes("lose"))
-                computerScore++;
-            console.log(playerScore, computerScore);
-
-        }
-
-        let game = function () {
-            let round = 0;
-            do {
-                playRound();
-                round += 1;
-            } while (round < 5);
-        }
-
-        game();
-    </script>
+    <header>
+        <h1>Rock, Paper, Scissors, SHOOT! </h1>
+    </header>
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <h2>Scoreboard:</h2>
+    <p id="humanScore">Human: 0</p>
+    <p id="computerScore">Computer: 0</p>
+    <p id="tieScore">Ties: 0</p>
+    <h3>First to 5 wins!</h3>
+    <script src="rps.js"></script>
 </body>
 
 </html>
